compiler/tools/fpp-check/test/redef/array.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef/array.fpp: 2.1
array A = [2] U32
^
error: redefinition of symbol A
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef/array.fpp: 1.1
array A = [1] U32
^
